[Feature] (Swagger): Init

--- a/app.api/app.api.csproj
+++ b/app.api/app.api.csproj
@@ -12,5 +12,9 @@
     <ProjectReference Include="..\app.infrastructure\app.infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
+  </ItemGroup>
+
 
 </Project>
