--- a/app.api/app.api.csproj
+++ b/app.api/app.api.csproj
@@ -8,5 +8,9 @@
     <Folder Include="ViewModels" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\app.infrastructure\app.infrastructure.csproj" />
+  </ItemGroup>
+
 
 </Project>
