--- a/app.api/appsettings.json
+++ b/app.api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DotactDBConnection": "Server=localhost;User Id=sa;Password=P@ssword;Database=Dotact;MultipleActiveResultSets=true"
+  }
 }
