[Feature] (Jwt): Init

--- a/app.api/appsettings.json
+++ b/app.api/appsettings.json
@@ -9,5 +9,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DotactDBConnection": "Server=localhost;User Id=sa;Password=P@ssword;Database=Dotact;MultipleActiveResultSets=true"
+  },
+  "JwtConfig": {
+    "secret": "PDv7DrqznYL6nv7DrqzjnQYO9JxIsWdcjnQYL6nu0f",
+    "expirationInMinutes": 1440
   }
 }
