--- a/app.infrastructure/app.infrastructure.csproj
+++ b/app.infrastructure/app.infrastructure.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\app.core\app.core.csproj" />
+  </ItemGroup>
+
 </Project>
