--- a/app.api/app.api.csproj
+++ b/app.api/app.api.csproj
@@ -9,6 +9,7 @@
     <ProjectReference Include="..\app.core\app.core.csproj" />
     <ProjectReference Include="..\app.infrastructure\app.infrastructure.csproj" />
     <ProjectReference Include="..\app.root\app.root.csproj" />
+    <ProjectReference Include="..\app.signalR\app.signalR.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -48,6 +49,11 @@
 
   <ItemGroup>
     <None Remove="Migrations\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Constants" />
+    <Folder Include="Pages\Shared" />
   </ItemGroup>
 
 
