--- a/app.api/appsettings.json
+++ b/app.api/appsettings.json
@@ -13,5 +13,12 @@
   "JwtConfig": {
     "secret": "PDv7DrqznYL6nv7DrqzjnQYO9JxIsWdcjnQYL6nu0f",
     "expirationInMinutes": 1440
+  },
+  "EmailConfiguration": {
+    "From": "carptechfresher2020@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "carptechfresher2020@gmail.com",
+    "Password": "carptechfresher2020@@"
   }
 }
