--- a/app.mail/app.mail.csproj
+++ b/app.mail/app.mail.csproj
@@ -7,6 +7,12 @@
     <ItemGroup>
       <PackageReference Include="MailKit" Version="2.7.0" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
+      <PackageReference Include="PreMailer.Net" Version="2.2.0" />
+      <PackageReference Include="Scriban" Version="2.1.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\app.core\app.core.csproj" />
     </ItemGroup>
 
 </Project>
