[Implement] (HangFire): Init

--- a/app.api/appsettings.json
+++ b/app.api/appsettings.json
@@ -3,12 +3,14 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Hangfire": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DotactDBConnection": "Server=localhost;User Id=sa;Password=P@ssword;Database=Dotact;MultipleActiveResultSets=true"
+    "DotactDBConnection": "Server=localhost;User Id=sa;Password=P@ssword;Database=Dotact;MultipleActiveResultSets=true",
+    "HangfireConnection": "Server=localhost;User Id=sa;Password=P@ssword;Database=HangfireTest;MultipleActiveResultSets=true"
   },
   "JwtConfig": {
     "secret": "PDv7DrqznYL6nv7DrqzjnQYO9JxIsWdcjnQYL6nu0f",
