Source Organization - part 1

--- a/app.api/app.api.csproj
+++ b/app.api/app.api.csproj
@@ -13,12 +13,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\app.business\app.business.csproj" />
+    <ProjectReference Include="..\app.business\app.service.csproj" />
     <ProjectReference Include="..\app.core\app.core.csproj" />
     <ProjectReference Include="..\app.infrastructure\app.infrastructure.csproj" />
     <ProjectReference Include="..\app.mail\app.mail.csproj" />
-    <ProjectReference Include="..\app.root\app.root.csproj" />
-    <ProjectReference Include="..\app.signalR\app.signalR.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -44,7 +42,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
     </Content>
+    <Content Remove="Constants\**" />
     <Content Remove="Migrations\**" />
+    <Content Remove="Pages\**" />
     <Content Update="appsettings.json">
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -53,20 +53,21 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Remove="Constants\**" />
     <Compile Remove="Migrations\**" />
+    <Compile Remove="Pages\**" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Remove="Constants\**" />
     <EmbeddedResource Remove="Migrations\**" />
+    <EmbeddedResource Remove="Pages\**" />
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="Constants\**" />
     <None Remove="Migrations\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Constants" />
-    <Folder Include="Pages\Shared" />
+    <None Remove="Pages\**" />
   </ItemGroup>
 
 
