--- a/app.business/app.service.csproj
+++ b/app.business/app.service.csproj
@@ -5,6 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.6.0" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.6.0" />
+    </ItemGroup>
+
+    <ItemGroup>
       <ProjectReference Include="..\app.core\app.core.csproj" />
       <ProjectReference Include="..\app.infrastructure\app.infrastructure.csproj" />
     </ItemGroup>
