--- a/app.core/app.core.csproj
+++ b/app.core/app.core.csproj
@@ -5,6 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Folder Include="Consts\" />
+      <Folder Include="Enums\" />
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="3.1.4" />
     </ItemGroup>
 
