--- a/app.infrastructure/app.infrastructure.csproj
+++ b/app.infrastructure/app.infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\app.core\app.core.csproj" />
+    <ProjectReference Include="..\app.core\App.Core.csproj" />
   </ItemGroup>
 
 </Project>
