Remove redundant projects and files

--- a/app.api/app.api.csproj
+++ b/app.api/app.api.csproj
@@ -13,7 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\app.business\app.business.csproj" />
+    <ProjectReference Include="..\app.business\App.Service.csproj" />
     <ProjectReference Include="..\app.core\app.core.csproj" />
     <ProjectReference Include="..\app.infrastructure\app.infrastructure.csproj" />
     <ProjectReference Include="..\app.mail\app.mail.csproj" />
