--- a/app.root/app.root.csproj
+++ b/app.root/app.root.csproj
@@ -9,8 +9,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\app.business\App.Service.csproj" />
-      <ProjectReference Include="..\app.infrastructure\app.infrastructure.csproj" />
+      <ProjectReference Include="..\App.Infrastructure\App.Infrastructure.csproj" />
+      <ProjectReference Include="..\App.Service\App.Service.csproj" />
     </ItemGroup>
 
 </Project>
