[Implement] (Redis): Init

--- a/app.api/appsettings.json
+++ b/app.api/appsettings.json
@@ -9,8 +9,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DotactDBConnection": "Server=localhost;Integrated Security=true;Database=Dotact;MultipleActiveResultSets=true",
-    "HangfireConnection": "Server=localhost;Integrated Security=true;Database=HangfireTest;MultipleActiveResultSets=true"
+    "DotactDBConnection": "Server=localhost;User Id=sa;Password=P@ssword;Database=Dotact;MultipleActiveResultSets=true",
+    "HangfireConnection": "Server=localhost;User Id=sa;Password=P@ssword;Database=HangfireTest;MultipleActiveResultSets=true"
   },
   "JwtConfig": {
     "secret": "PDv7DrqznYL6nv7DrqzjnQYO9JxIsWdcjnQYL6nu0f",
