--- a/app.api/Properties/launchSettings.json
+++ b/app.api/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "app.api": {
+    "App.Api": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "",
