Register API (sending email included)

--- a/App.Api/appsettings.json
+++ b/App.Api/appsettings.json
@@ -7,6 +7,7 @@
       "Hangfire": "Information"
     }
   },
+  "ClientAppUrl":  "www.google.com",
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DotactDBConnection": "Server=localhost;Integrated Security=true;Database=Dotact;MultipleActiveResultSets=true",
