Add 2 columns in User table

--- a/App.Api/appsettings.json
+++ b/App.Api/appsettings.json
@@ -18,7 +18,7 @@
     "expirationInMinutes": 1440
   },
   "EmailConfiguration": {
-    "From": "carptechfresher2020@gmail.com",
+    "From": "DotactVN",
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
     "Username": "carptechfresher2020@gmail.com",
