--- a/App.Api/appsettings.json
+++ b/App.Api/appsettings.json
@@ -7,7 +7,7 @@
       "Hangfire": "Information"
     }
   },
-  "ClientAppUrl":  "www.google.com",
+  "ClientAppUrl": "www.google.com",
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DotactDBConnection": "Server=localhost;Integrated Security=true;Database=Dotact;MultipleActiveResultSets=true",
@@ -23,5 +23,11 @@
     "Port": 465,
     "Username": "carptechfresher2020@gmail.com",
     "Password": "carptechfresher2020@@"
+  },
+  "Authentication": {
+    "Google": {
+      "ClientId": "243208192554-opi8ktdsevdvja947e4p816002evglsj.apps.googleusercontent.com",
+      "ClientSecret": "hgjZ-NQQ4Kul-e0Dj1eoEJgt"
+    }
   }
 }
